[gd_scene load_steps=11 format=3 uid="uid://1108mwthb07h"]

[ext_resource type="Script" uid="uid://mpvqk2y15bit" path="res://scripts/main.gd" id="1_jyhfs"]
[ext_resource type="PackedScene" uid="uid://dkiv5dpjy1xpe" path="res://scenes/map.tscn" id="1_o5qli"]
[ext_resource type="Script" uid="uid://bo710ml7wlteq" path="res://scripts/camera_controller.gd" id="2_0wfyh"]
[ext_resource type="PackedScene" uid="uid://dar0c0qbgk3rs" path="res://scenes/robot.tscn" id="3_sugp2"]
[ext_resource type="AudioStream" uid="uid://mecmyl5x7m4p" path="res://assets/sounds/tap.wav" id="5_tbgi4"]
[ext_resource type="PackedScene" uid="uid://bk1pppmgidyai" path="res://scenes/enemy_bot.tscn" id="6_tefeu"]
[ext_resource type="PackedScene" uid="uid://c1n1c03ndu10g" path="res://scenes/hud.tscn" id="7_o6xl0"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_0wfyh"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_sugp2"]
sky_material = SubResource("ProceduralSkyMaterial_0wfyh")

[sub_resource type="Environment" id="Environment_jyhfs"]
background_mode = 2
sky = SubResource("Sky_sugp2")
tonemap_mode = 2
glow_enabled = true

[node name="Main" type="Node3D"]
script = ExtResource("1_jyhfs")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_jyhfs")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, 0.453991, -0.891006, 0, 0.891006, 0.453991, 1, 1.98446e-08, -3.89471e-08, -4, 5, 4.5)
script = ExtResource("2_0wfyh")

[node name="Map" parent="." instance=ExtResource("1_o5qli")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)

[node name="Bot" parent="." instance=ExtResource("3_sugp2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 2)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="TickStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_tbgi4")

[node name="Enemy_Bot" parent="." instance=ExtResource("6_tefeu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.25, 10)

[node name="Hud" parent="." instance=ExtResource("7_o6xl0")]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="attack_player" from="Enemy_Bot" to="Hud" method="_on_enemy_bot_attack_player"]
